# alexa-avr-control

./: Cargo.toml  README.md  interaction_model.json
src/: avr.rs  main.rs  site.rs  skill.rs  speech.rs  tel.rs  telnet.rs
