[package]
name = "alexa-avr-control"
version = "0.1.0"
authors = ["Cory Forsstrom <cforsstrom18@gmail.com>"]
edition = "2018"
description = "A self hosted Alexa skill to control a network-enabled Pioneer AVR through telnet commands."

[dependencies]
alexa_sdk = { path="../alexa_rust" }
actix-web = "1.0"
env_logger = "0.6"
failure = "0.1"
log = "0.4"