[package]
name = "alexa-avr-control"
version = "0.1.0"
authors = ["Cory Forsstrom <cforsstrom18@gmail.com>"]
edition = "2018"
description = "A self hosted Alexa skill to control a network-enabled Pioneer AVR through telnet commands."

[dependencies]
alexa_sdk = { git = "https://github.com/tarkah/alexa_rust" }
alexa-verifier = { version = "0.2.1", default-features = false, features = ['sync'] }
bytes = "0.4"
clap = "2.33"
crossbeam-channel = "0.3"
env_logger = "0.6"
failure = "0.1"
lazy_static = "1.3"
log = "0.4"
rouille = "3.0"
serde_json = "1.0"
telnet = "0.1"